--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   h2:
     console:
-      enabled: false
+      # Set false for production
+      enabled: true
       path: /h2-ui
   datasource:
     url: jdbc:h2:mem:testdb
-    username: test
-    password: test
+    username: changeThis
+    password: changeThis
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
