--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>ch.hesge</groupId>
 	<artifactId>kryptonite</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Kryptonite</name>
 	<description>Kryptonite backend</description>
 
